feat: Phase 2 MCP Servers implementation complete
Implemented 4 MCP servers with 14 tools total:

Servers:
- market-data (port 3001): 3 tools (quote, ohlcv, symbols)
- technical (port 3002): 3 tools (indicators, regime, SR levels)
- risk (port 3003): 3 tools (limits, sizing, exposure)
- ibkr (port 3004): 5 tools (account, positions, orders)

Infrastructure:
- BaseMCPServer with MCP SDK 1.8.0+ integration
- Common config loader and exceptions
- Connection pooling support
- YAML configuration with env var substitution

Safety Features (IBKR):
- Paper trading only enforcement
- Order value limits (,000 max)
- Connection retry logic (5min intervals)
- Port validation (4002 Gateway paper vs 4001 live)

Testing:
- 22 integration tests with fixtures
- Verification script for all servers
- Health checks and tool availability tests
- IBKR safety tests (paper trading enforcement)

Deployment:
- Dockerfile for MCP servers
- docker-compose.yml updated with 4 services
- Bridge network configuration
- Documentation and usage examples

Files: ~50 files, ~3,500 lines
Tools: 14 total across 4 servers
Tests: 22 integration tests

Ready for Phase 3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,78 @@ services:
       - influxdb
     restart: unless-stopped
 
+  # MCP Market Data Server
+  mcp-market-data:
+    build:
+      context: .
+      dockerfile: mcp-servers/Dockerfile
+    container_name: mcp_market_data
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=redis://redis:6379/0
+    command: python -m market-data.server
+    working_dir: /app/mcp-servers
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - trading_network
+
+  # MCP Technical Server
+  mcp-technical:
+    build:
+      context: .
+      dockerfile: mcp-servers/Dockerfile
+    container_name: mcp_technical
+    environment:
+      - DATABASE_URL=${DATABASE_URL}
+    command: python -m technical.server
+    working_dir: /app/mcp-servers
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    networks:
+      - trading_network
+
+  # MCP Risk Server
+  mcp-risk:
+    build:
+      context: .
+      dockerfile: mcp-servers/Dockerfile
+    container_name: mcp_risk
+    command: python -m risk.server
+    working_dir: /app/mcp-servers
+    restart: unless-stopped
+    networks:
+      - trading_network
+
+  # MCP IBKR Server (optional - requires IB Gateway)
+  mcp-ibkr:
+    build:
+      context: .
+      dockerfile: mcp-servers/Dockerfile
+    container_name: mcp_ibkr
+    environment:
+      - IBKR_HOST=${IBKR_HOST:-host.docker.internal}
+      - IBKR_PORT=${IBKR_PORT:-4002}
+      - IBKR_CLIENT_ID=${IBKR_CLIENT_ID:-1}
+    command: python -m ibkr.server
+    working_dir: /app/mcp-servers
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    restart: on-failure
+    networks:
+      - trading_network
+
+networks:
+  trading_network:
+    driver: bridge
+
+
 volumes:
   postgres_data:
   redis_data:
