refactor: Rename directories and fix async issues
Directory renames (Python naming conventions):
- mcp-servers  mcp_servers
- market-data  market_data

Docker updates:
- Updated docker-compose.yml (4 services)
- Updated Dockerfile paths and commands

IBKR async fixes:
- positions.py: ib.positions()  await ib.positionsAsync()
- orders.py: ib.placeOrder()  await ib.placeOrderAsync()
- account.py: ib.accountSummary()  await ib.accountSummaryAsync()

Bug fixes:
- symbols.py: Removed non-existent description field
- test_real_data.py: Fixed imports and typos

Validation:
 All tests passing (3/3)
 Risk server: Limits, Sizing, Exposure
 Symbols server: 20 symbols loaded
 IBKR server: Paper account connected (+)

Following Python best practices and proper async/await patterns.

--- a/mcp_servers/Dockerfile
+++ b/mcp_servers/Dockerfile
@@ -12,16 +12,16 @@ RUN apt-get update && apt-get install -y \
 
 # Copy requirements
 COPY requirements.txt .
-COPY mcp-servers/requirements.txt mcp-servers-requirements.txt
+COPY mcp_servers/requirements.txt mcp_servers_requirements.txt
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt && \
-    pip install --no-cache-dir -r mcp-servers-requirements.txt
+    pip install --no-cache-dir -r mcp_servers_requirements.txt
 
 # Copy application code
 COPY config/ config/
 COPY src/ src/
-COPY mcp-servers/ mcp-servers/
+COPY mcp_servers/ mcp_servers/
 
 # Create non-root user
 RUN useradd -m -u 1000 mcp && \
@@ -30,4 +30,4 @@ RUN useradd -m -u 1000 mcp && \
 USER mcp
 
 # Default command (override in docker-compose)
-CMD ["python", "-m", "mcp-servers.market-data.server"]
+CMD ["python", "-m", "market_data.server"]
