--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,16 +75,16 @@ services:
     restart: unless-stopped
 
   # MCP Market Data Server
-  mcp-market-data:
+  mcp_market_data:
     build:
       context: .
-      dockerfile: mcp-servers/Dockerfile
+      dockerfile: mcp_servers/Dockerfile
     container_name: mcp_market_data
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=redis://redis:6379/0
-    command: python -m market-data.server
-    working_dir: /app/mcp-servers
+    command: python -m market_data.server
+    working_dir: /app/mcp_servers
     depends_on:
       postgres:
         condition: service_healthy
@@ -95,15 +95,15 @@ services:
       - trading_network
 
   # MCP Technical Server
-  mcp-technical:
+  mcp_technical:
     build:
       context: .
-      dockerfile: mcp-servers/Dockerfile
+      dockerfile: mcp_servers/Dockerfile
     container_name: mcp_technical
     environment:
       - DATABASE_URL=${DATABASE_URL}
     command: python -m technical.server
-    working_dir: /app/mcp-servers
+    working_dir: /app/mcp_servers
     depends_on:
       postgres:
         condition: service_healthy
@@ -112,29 +112,29 @@ services:
       - trading_network
 
   # MCP Risk Server
-  mcp-risk:
+  mcp_risk:
     build:
       context: .
-      dockerfile: mcp-servers/Dockerfile
+      dockerfile: mcp_servers/Dockerfile
     container_name: mcp_risk
     command: python -m risk.server
-    working_dir: /app/mcp-servers
+    working_dir: /app/mcp_servers
     restart: unless-stopped
     networks:
       - trading_network
 
   # MCP IBKR Server (optional - requires IB Gateway)
-  mcp-ibkr:
+  mcp_ibkr:
     build:
       context: .
-      dockerfile: mcp-servers/Dockerfile
+      dockerfile: mcp_servers/Dockerfile
     container_name: mcp_ibkr
     environment:
       - IBKR_HOST=${IBKR_HOST:-host.docker.internal}
       - IBKR_PORT=${IBKR_PORT:-4002}
       - IBKR_CLIENT_ID=${IBKR_CLIENT_ID:-1}
     command: python -m ibkr.server
-    working_dir: /app/mcp-servers
+    working_dir: /app/mcp_servers
     extra_hosts:
       - "host.docker.internal:host-gateway"
     restart: on-failure
