--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,10 @@ tqdm>=4.66.0
 
 # Parquet
 pyarrow>=14.0.0
+
+# Phase 3: Autonomous Agents
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.12.0
+pytest-cov>=4.1.0
