feat: Complete Phase 3 corrections - All 10 fixes implemented
- Fix #5: Externalized sector mapping to PostgreSQL (15 symbols)
- Fix #6: Centralized risk limits in risk_limits.py
- Fix #7: Real heartbeat with Redis SETEX (60s TTL)
- Fix #8: HTTP retry with tenacity (exponential backoff)
- Fix #9: Request tracing with correlation_id (end-to-end)
- Fix #10: Extracted magic numbers to constants.py

New files:
- src/core/risk_limits.py - Centralized risk limits
- src/core/constants.py - System constants
- init-scripts/08_table_symbols_metadata.sql - Symbols metadata table

Modified files:
- src/agents/base.py - Recreated with heartbeat
- src/agents/risk_manager.py - DB sector lookup + correlation_id
- src/agents/orchestrator.py - Constants + correlation_id
- src/agents/schemas.py - Added correlation_id to all schemas
- src/agents/mcp_client.py - Retry with tenacity
- src/agents/technical.py - Fixed datetime import
- mcp_servers/risk/tools/limits.py - Centralized limits
- scripts/verify_agents.py - Real heartbeat checks
- requirements.txt - Added tenacity

Progress: 10/10 fixes completed (100%)

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ numpy>=1.26.0
 # HTTP
 requests>=2.31.0
 httpx>=0.25.0
+tenacity>=8.2.0  # For retry logic with exponential backoff
 
 # Scheduling
 apscheduler>=3.10.0
