--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ yfinance>=0.2.33
 ib_insync>=0.9.86
 
 # Technical analysis
-pandas-ta>=0.3.14b
+git+https://github.com/twopirllc/pandas-ta.git@development
 
 # Progress bars
 tqdm>=4.66.0
@@ -47,3 +47,10 @@ pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-mock>=3.12.0
 pytest-cov>=4.1.0
+
+# Additional Dependencies
+hmmlearn>=0.3.0
+joblib>=1.3.0
+anthropic>=0.18.0
+asyncpg>=0.29.0
+
