Fix Docker build/runtime & Add Hybrid Launch Mode
- Docker Fixes:
  - Upgrade base image to python:3.12-slim for pandas-ta compatibility
  - Fix MCP server relative imports
  - Add missing env vars (DATABASE_URL, REDIS_URL) to MCP services
  - Enable MCP_TRANSPORT=http for all services to fix restart loops
- Connectivity:
  - Add scripts/start_local.py for Hybrid Mode (Docker DBs + Local Python) to solve IBKR networking issues
  - Separate gateway_host from bind host in IBKR config
- Misc:
  - Fix UniverseManager instantiation arg in run_strategy_lab.py
  - Force rebuilds in start_system.py

--- a/config/mcp-servers.yaml
+++ b/config/mcp-servers.yaml
@@ -40,7 +40,7 @@ risk:
 # IBKR Trading Server (Port 3004)
 ibkr:
   port: 3004
-  host: ${IBKR_HOST:-127.0.0.1}
+  gateway_host: ${IBKR_HOST:-127.0.0.1}
   tws_port: ${IBKR_PORT:-4002}  # 4002=IB Gateway paper, 4001=Gateway live
   client_id: 1
   timeout: 30
