--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ numpy>=1.26.0
 # HTTP
 requests>=2.31.0
 httpx>=0.25.0
+aiohttp>=3.9.0
 tenacity>=8.2.0  # For retry logic with exponential backoff
 
 # Scheduling
